--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ mccabe==0.6.1
 mypy-extensions==0.4.3
 numpy==1.19.3
 numpydoc==1.1.0
-pandas==1.2.0
+pandas>=0.19
 paramiko==2.7.2
 parso==0.7.0
 pathspec==0.8.1
