--- a/requirements.txt
+++ b/requirements.txt
@@ -72,8 +72,6 @@ regex==2020.11.13
 requests==2.25.1
 rope==0.18.0
 scikit-learn==0.24.0
-scipy==1.6.0
+scipy>=0.15.1
 seaborn==0.11.1
-sklearn==0.0
-snowballstemmer==2.0.0
-sortedcontainers==2.3.0
+sklearn>=0.18
