--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,7 @@
 alabaster==0.7.12
 appdirs==1.4.4
 astroid==2.4.2
-async-generator==1.10
-atomicwrites==1.4.0
-autopep8==1.5.4
-Babel==2.9.0
-backcall==0.2.0
-bcrypt==3.2.0
-black==20.8b1
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
-cloudpickle==1.6.0
-cryptography==3.3.1
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-diff-match-patch==20200713
-docutils==0.16
-entrypoints==0.3
+gunicorn==19.9.0
 flake8==3.8.4
 Flask==1.1.2
 helpdev==0.7.1
@@ -31,10 +14,6 @@ jedi==0.17.2
 Jinja2==2.11.2
 joblib==1.0.0
 jsonify==0.5
-jupyter==1.0.0
-keyring==21.8.0
-kiwisolver==1.3.1
-lazy-object-proxy==1.4.3
 matplotlib==3.3.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
@@ -53,21 +32,6 @@ pycodestyle==2.6.0
 pydocstyle==5.1.1
 pyflakes==2.2.0
 pylint==2.6.0
-pyls-black==0.4.6
-pyls-spyder==0.3.0
-PyNaCl==1.4.0
-pyparsing==2.4.7
-PyQt5==5.12.3
-PyQt5-sip==12.8.1
-PyQtWebEngine==5.12.1
-python-dateutil==2.8.1
-python-jsonrpc-server==0.4.0
-python-language-server==0.36.2
-pytz==2020.5
-QDarkStyle==2.8.1
-QtAwesome==1.0.2
-qtconsole==5.0.1
-QtPy==1.9.0
 regex==2020.11.13
 requests==2.25.1
 rope==0.18.0
